crates/anvil-tui/src/surfaces/audit/snapshots/anvil_tui__surfaces__audit__render__tests__snapshot_issues_focused.snap
---
source: crates/anvil-tui/src/surfaces/audit/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
A[fg:#CC5500,bold]n[fg:#CC5500,bold]v[fg:#CC5500,bold]i[fg:#CC5500,bold]l[fg:#CC5500,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]A[fg:#EBEBEB]u[fg:#EBEBEB]d[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB]                                                                   
┌[fg:#85858A] [fg:#85858A]P[fg:#85858A]r[fg:#85858A]o[fg:#85858A]j[fg:#85858A]e[fg:#85858A]c[fg:#85858A]t[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A]P[fg:#85858A]r[fg:#85858A]o[fg:#85858A]j[fg:#85858A]e[fg:#85858A]c[fg:#85858A]t[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A]t[fg:#CC5500,bold]e[fg:#CC5500,bold]s[fg:#CC5500,bold]t[fg:#CC5500,bold]-[fg:#CC5500,bold]p[fg:#CC5500,bold]r[fg:#CC5500,bold]o[fg:#CC5500,bold]j[fg:#CC5500,bold]e[fg:#CC5500,bold]c[fg:#CC5500,bold]t[fg:#CC5500,bold]                                                        │[fg:#85858A]
│[fg:#85858A]F[fg:#85858A]i[fg:#85858A]l[fg:#85858A]e[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]4[fg:#EBEBEB]2[fg:#EBEBEB]                                                                  │[fg:#85858A]
│[fg:#85858A]I[fg:#85858A]s[fg:#85858A]s[fg:#85858A]u[fg:#85858A]e[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]1[fg:#C94A4A] [fg:#C94A4A]c[fg:#C94A4A]r[fg:#C94A4A]i[fg:#C94A4A]t[fg:#C94A4A]i[fg:#C94A4A]c[fg:#C94A4A]a[fg:#C94A4A]l[fg:#C94A4A]  0[fg:#C94A4A] [fg:#C94A4A]h[fg:#C94A4A]i[fg:#C94A4A]g[fg:#C94A4A]h[fg:#C94A4A]  1[fg:#D08C38] [fg:#D08C38]m[fg:#D08C38]e[fg:#D08C38]d[fg:#D08C38]i[fg:#D08C38]u[fg:#D08C38]m[fg:#D08C38]  0[fg:#85858A] [fg:#85858A]l[fg:#85858A]o[fg:#85858A]w[fg:#85858A]                                 │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
┌[fg:#CC5500] [fg:#CC5500,bold]C[fg:#CC5500,bold]u[fg:#CC5500,bold]r[fg:#CC5500,bold]r[fg:#CC5500,bold]e[fg:#CC5500,bold]n[fg:#CC5500,bold]t[fg:#CC5500,bold] [fg:#CC5500,bold]I[fg:#CC5500,bold]s[fg:#CC5500,bold]s[fg:#CC5500,bold]u[fg:#CC5500,bold]e[fg:#CC5500,bold]s[fg:#CC5500,bold] [fg:#CC5500,bold]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]┐[fg:#CC5500]
│[fg:#CC5500]>[fg:#EBEBEB,bold]>[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]C[fg:#C94A4A]R[fg:#C94A4A]I[fg:#C94A4A]T[fg:#C94A4A] [fg:#C94A4A]H[fg:#EBEBEB,bold]a[fg:#EBEBEB,bold]r[fg:#EBEBEB,bold]d[fg:#EBEBEB,bold]c[fg:#EBEBEB,bold]o[fg:#EBEBEB,bold]d[fg:#EBEBEB,bold]e[fg:#EBEBEB,bold]d[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]A[fg:#EBEBEB,bold]P[fg:#EBEBEB,bold]I[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]k[fg:#EBEBEB,bold]e[fg:#EBEBEB,bold]y[fg:#EBEBEB,bold] [fg:#85858A] [fg:#85858A]s[fg:#85858A]r[fg:#85858A]c[fg:#85858A]/[fg:#85858A]c[fg:#85858A]o[fg:#85858A]n[fg:#85858A]f[fg:#85858A]i[fg:#85858A]g[fg:#85858A].[fg:#85858A]t[fg:#85858A]s[fg:#85858A]:[fg:#85858A]1[fg:#85858A]5[fg:#85858A]                                   │[fg:#CC5500]
│[fg:#CC5500] [fg:#EBEBEB] [fg:#EBEBEB]M[fg:#D08C38]E[fg:#D08C38]D[fg:#D08C38] [fg:#D08C38]C[fg:#EBEBEB]r[fg:#EBEBEB]o[fg:#EBEBEB]s[fg:#EBEBEB]s[fg:#EBEBEB]-[fg:#EBEBEB]b[fg:#EBEBEB]o[fg:#EBEBEB]u[fg:#EBEBEB]n[fg:#EBEBEB]d[fg:#EBEBEB]a[fg:#EBEBEB]r[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]i[fg:#EBEBEB]m[fg:#EBEBEB]p[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#CC5500][[fg:#CC5500]f[fg:#CC5500]i[fg:#CC5500]x[fg:#CC5500]][fg:#CC5500] [fg:#85858A] [fg:#85858A]s[fg:#85858A]r[fg:#85858A]c[fg:#85858A]/[fg:#85858A]u[fg:#85858A]t[fg:#85858A]i[fg:#85858A]l[fg:#85858A]s[fg:#85858A]/[fg:#85858A]d[fg:#85858A]b[fg:#85858A].[fg:#85858A]t[fg:#85858A]s[fg:#85858A]:[fg:#85858A]3[fg:#85858A]                          │[fg:#CC5500]
│[fg:#CC5500]                                                                              │[fg:#CC5500]
└[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]─[fg:#CC5500]┘[fg:#CC5500]
┌[fg:#85858A] [fg:#85858A]H[fg:#85858A]i[fg:#85858A]s[fg:#85858A]t[fg:#85858A]o[fg:#85858A]r[fg:#85858A]i[fg:#85858A]c[fg:#85858A]a[fg:#85858A]l[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]2[fg:#EBEBEB]0[fg:#EBEBEB]2[fg:#EBEBEB]6[fg:#EBEBEB]-[fg:#EBEBEB]0[fg:#EBEBEB]3[fg:#EBEBEB]-[fg:#EBEBEB]1[fg:#EBEBEB]5[fg:#EBEBEB]  8[fg:#D08C38]5[fg:#D08C38]%[fg:#D08C38] [fg:#85858A] [fg:#85858A]5[fg:#85858A] [fg:#85858A]i[fg:#85858A]s[fg:#85858A]s[fg:#85858A]u[fg:#85858A]e[fg:#85858A]s[fg:#85858A]                                                   │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
┌[fg:#85858A] [fg:#85858A]N[fg:#85858A]e[fg:#85858A]x[fg:#85858A]t[fg:#85858A] [fg:#85858A]S[fg:#85858A]t[fg:#85858A]e[fg:#85858A]p[fg:#85858A]s[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]1[fg:#85858A].[fg:#85858A] [fg:#85858A]F[fg:#EBEBEB]i[fg:#EBEBEB]x[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]u[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]i[fg:#EBEBEB]s[fg:#EBEBEB]s[fg:#EBEBEB]u[fg:#EBEBEB]e[fg:#EBEBEB]                                              │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]2[fg:#85858A].[fg:#85858A] [fg:#85858A]R[fg:#EBEBEB]e[fg:#EBEBEB]v[fg:#EBEBEB]i[fg:#EBEBEB]e[fg:#EBEBEB]w[fg:#EBEBEB] [fg:#EBEBEB]b[fg:#EBEBEB]o[fg:#EBEBEB]u[fg:#EBEBEB]n[fg:#EBEBEB]d[fg:#EBEBEB]a[fg:#EBEBEB]r[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]v[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB]s[fg:#EBEBEB]                                               │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
j[fg:#85858A]/[fg:#85858A]k[fg:#85858A] [fg:#85858A]n[fg:#85858A]a[fg:#85858A]v[fg:#85858A]i[fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A] [fg:#85858A]h[fg:#85858A]/[fg:#85858A]l[fg:#85858A] [fg:#85858A]s[fg:#85858A]w[fg:#85858A]i[fg:#85858A]t[fg:#85858A]c[fg:#85858A]h[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]n[fg:#85858A]e[fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A]e[fg:#85858A]x[fg:#85858A]p[fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A] [fg:#85858A]b[fg:#85858A]a[fg:#85858A]c[fg:#85858A]k[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A][[fg:#2A2A2E] [fg:#2A2A2E]■[fg:#2A2A2E] [fg:#2A2A2E]][fg:#2A2A2E] [fg:#2A2A2E]e[fg:#2A2A2E] [fg:#2A2A2E]d[fg:#2A2A2E] [fg:#2A2A2E]d[fg:#2A2A2E] [fg:#2A2A2E]a[fg:#2A2A2E] [fg:#2A2A2E]c[fg:#2A2A2E] [fg:#2A2A2E]r[fg:#2A2A2E] [fg:#2A2A2E]
